--- a/index.html
+++ b/index.html
@@ -4,8 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my project</title>
+    <link rel="stylesheet" href="style/project.css">
 </head>
 <body>
-    <h3>My First Project</h3>
+    <h3>Welcome to My Practice Page</h3>
+    <div class="para1">
+    <p>This is the first paragraph. You can practice how to style text using CSS here.</p>
+    <p>This is the second paragraph. Try changing colors, fonts, or add margin and padding.</p>
+    <p>This is the third paragraph. This is a great way to learn how HTML and CSS work together.</p>
+   
+
+    <div class="para2">This is a special box! You can change its background color, border, and text style.</div>
+     </div>
 </body>
 </html>
